--- a/patient-service/src/main/resources/application.yml
+++ b/patient-service/src/main/resources/application.yml
@@ -14,6 +14,7 @@ server:
 
 eureka:
   instance:
+    prefer-ip-address: true
     lease-renewal-interval-in-seconds: 15
   client:
     service-url:
