feat: add ip address and change instance id

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,8 @@ jobs:
 
             echo "EUREKA_HOST=${{ secrets.EUREKA_HOST_PROD }}" >> $GITHUB_ENV
             echo "EUREKA_PORT=${{ secrets.EUREKA_PORT_PROD }}" >> $GITHUB_ENV
+
+            echo "PUBLIC_HOST=${{ secrets.PUBLIC_HOST_PROD }}" >> $GITHUB_ENV
           else
             echo "HOST=${{ secrets.GCP_VM_HOST }}" >> $GITHUB_ENV
 
@@ -55,6 +57,8 @@ jobs:
 
             echo "EUREKA_HOST=${{ secrets.EUREKA_HOST }}" >> $GITHUB_ENV
             echo "EUREKA_PORT=${{ secrets.EUREKA_PORT }}" >> $GITHUB_ENV
+
+            echo "PUBLIC_HOST=${{ secrets.PUBLIC_HOST }}" >> $GITHUB_ENV
           fi
 
       - name: Set up SSH
@@ -88,5 +92,6 @@ jobs:
               -e KAFKA_PORT="$KAFKA_PORT" \
               -e EUREKA_HOST="$EUREKA_HOST" \
               -e EUREKA_PORT="$EUREKA_PORT" \
+              -e PUBLIC_HOST="$PUBLIC_HOST" \
               patient-service
           EOF
