--- a/patient-service/src/main/resources/application.yml
+++ b/patient-service/src/main/resources/application.yml
@@ -15,6 +15,8 @@ server:
 eureka:
   instance:
     prefer-ip-address: true
+    ip-address: ${PUBLIC_HOST:localhost}
+    instance-id: ${eureka.instance.ip-address}:${spring.application.name}:${server.port}
     lease-renewal-interval-in-seconds: 15
   client:
     service-url:
