feat: add docker prune

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,6 +75,12 @@ jobs:
             cd ./healntrack-patient
             git checkout ${GITHUB_REF_NAME}
             git pull
+
+            sudo docker container prune -f || true
+            sudo docker image prune -af || true
+            sudo docker builder prune -af || true
+            sudo docker volume prune -f || true
+
             sudo docker build -t patient-service .
 
             sudo docker stop patient-service || true
